# platonic-core

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent-ready.md  bug.md  feature.md  research.md  task.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  NAMING.md  TECHNICAL-LESSONS.md
src/: context.rs  error.rs  event.rs  ids.rs  lib.rs  message.rs  policy.rs  projection.rs  run.rs  tool.rs
