[package]
name = "platonic-core"
version = "0.1.0"
edition = "2024"
publish = false
description = "Core Rust harness primitives for disciplined, replayable agent execution."
license = "UNLICENSED"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
serde_json = "1"
