[package]
name = "platonic-core"
version = "0.1.0"
edition = "2024"
publish = ["crates-io"]
description = "Core Rust harness primitives for disciplined, replayable agent execution."
license = "MIT OR Apache-2.0"
repository = "https://github.com/referential-ai/platonic-core"
documentation = "https://docs.rs/platonic-core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
serde_json = "1"
